Mange/main/default/objects/Hostel_Allotment__c/Hostel_Allotment__c.object-meta.xml
<CustomObject>
    <label>Hostel Allotment</label>
    <nameField>
        <displayFormat>HA-{000}</displayFormat>
        <label>Hostel Allotment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hostel Allotments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>