Mange/main/default/objects/Hostel_Allotment__c/fields/Allotted_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Allotted_From_Date__c</fullName>
    <label>Allotted From Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>