Mange/main/default/objects/Hostel_Allotment__c/fields/Allotted_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Allotted_to_Date__c</fullName>
    <label>Allotted to Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>