Mange/main/default/objects/Hostel_Allotment__c/fields/Caution_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Caution_Deposit__c</fullName>
    <label>Caution Deposit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>