Mange/main/default/objects/Hostel_Allotment__c/fields/Checked_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_Date_Time__c</fullName>
    <label>Checked In Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>