Mange/main/default/objects/Hostel_Allotment__c/fields/Hostel_del__c.field-meta.xml
<CustomField>
    <fullName>Hostel_del__c</fullName>
    <label>Hostel</label>
    <referenceTo>Hostel__c</referenceTo>
    <relationshipLabel>Hostel Allotments</relationshipLabel>
    <relationshipName>Hostel_Allotments_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>