Mange/main/default/objects/Hostel_Allotment__c/fields/INSERT__c.field-meta.xml
<CustomField>
    <fullName>INSERT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INSERT</label>
    <type>Checkbox</type>
</CustomField>