Mange/main/default/objects/Hostel_Allotment__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>