Mange/main/default/objects/Hostel_Allotment__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Four Bed Room</fullName>
            </value>
            <value>
                <fullName>Four Bed Room AC</fullName>
            </value>
            <value>
                <fullName>Three Bed Room</fullName>
            </value>
            <value>
                <fullName>Three Bed Room AC</fullName>
            </value>
            <value>
                <fullName>Two Bed Room</fullName>
            </value>
            <value>
                <fullName>Two Bed Room AC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>