Mange/main/default/objects/Hostel_Allotment__c/recordTypes/All.recordType-meta.xml
<RecordType>
    <fullName>All</fullName>
    <active>true</active>
    <label>All</label>
</RecordType>