Mange/main/default/objects/Hostel_Allotment__c/recordTypes/Boys.recordType-meta.xml
<RecordType>
    <fullName>Boys</fullName>
    <active>true</active>
    <label>Boys</label>
</RecordType>