Mange/main/default/objects/Hostel_Allotment__c/recordTypes/Room_type.recordType-meta.xml
<RecordType>
    <fullName>Room_type</fullName>
    <active>true</active>
    <label>Girls</label>
</RecordType>