Mange/main/default/objects/Hostel_Allotment__c/validationRules/Alloted_From_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Alloted_From_date</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(Allotted_From_Date__c  =   TODAY())</errorConditionFormula>
    <errorDisplayField>Allotted_From_Date__c</errorDisplayField>
    <errorMessage>You should select only Today&apos;s date at this field</errorMessage>
</ValidationRule>