Mange/main/default/objects/Hostel_Allotment__c/validationRules/Allotted_to_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Allotted_to_Date</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(AND( YEAR( Allotted_to_Date__c ) = YEAR( Allotted_From_Date__c ) + 1, MONTH( Allotted_From_Date__c ) = MONTH( Allotted_to_Date__c ), DAY( Allotted_From_Date__c ) = DAY( Allotted_to_Date__c ) ) )</errorConditionFormula>
    <errorDisplayField>Allotted_to_Date__c</errorDisplayField>
    <errorMessage>Allotted to date should be exact an tear from allotted date</errorMessage>
</ValidationRule>