Mange/main/default/objects/Hostel_Allotment__c/validationRules/Caution_Deposit.validationRule-meta.xml
<ValidationRule>
    <fullName>Caution_Deposit</fullName>
    <active>false</active>
    <errorConditionFormula>OR( Caution_Deposit__c  &lt; 0, Caution_Deposit__c   =  0, Caution_Deposit__c  &gt;= 5000)</errorConditionFormula>
    <errorDisplayField>Caution_Deposit__c</errorDisplayField>
    <errorMessage>Caution deposit should be1 to 5000</errorMessage>
</ValidationRule>