Mange/main/default/objects/Hostel_Allotment__c/validationRules/Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Phone_Number__c )  ||  Phone_Number__c &lt; 0  ||  Phone_Number__c &gt;9999999999   ||   Phone_Number__c &lt; 6000000000</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Enter a Valid Phone number</errorMessage>
</ValidationRule>