Mange/main/default/objects/Hostel_Allotment__c/validationRules/Stop_the_process.validationRule-meta.xml
<ValidationRule>
    <fullName>Stop_the_process</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),RecordType.DeveloperName  &lt;&gt;  &apos;Boys&apos;)</errorConditionFormula>
    <errorMessage>YOU CAN&apos;T INSERT THE RECORD</errorMessage>
</ValidationRule>