Mange/main/default/objects/Hostel_Allotment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Room_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>